--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resource">
+	<classpathentry kind="src" output="target/classes" path="src/main/resource">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -17,7 +17,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="**" kind="src" output="target/classes" path="src/test/resource">
+	<classpathentry kind="src" output="target/classes" path="src/test/resource">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
