--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,11 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
+					<outputDirectory>${basedir}/target/common</outputDirectory>
+					<finalName>VisionMisMain</finalName>
 					<archive>
 						<manifest>
 							<mainClass>com.uni.app.main.Launcher</mainClass>
@@ -45,6 +48,14 @@
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
 				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
